# flea

./: CMakeLists.txt  README.md  main.cpp
inject/: injector.cpp  injector.h
ptrace/: executor.cpp  executor.h  tracee.h
shellcode/: Makefile
shellcode/loader/: entry.c  payload.h  quit.h
